testsuite/tests/grammar/invalid_token_rule/common.lkt
@abstract class FooNode implements Node[FooNode] {
}

class Example : FooNode {
}
